Two new endpoints for banks
